# data-science-project

./: .gitignore  AI_LOG.md  INSTRUCTIONS.md  README.md  main.py  pyproject.toml
data/CSV_BTCVIX/: BTC_VIX_returns.csv
data/processed/: dataprocessedbtc_daily.xlsx  dataprocessedvix_daily.xlsx
data/raw/: btc_2015_2017.xlsx  btc_2018_2025.xlsx  vix_2015_2017.xlsx  vix_2018_2025.xlsx
src/: RollingWindows.py  config.py  data_loader.py  evaluation_kupiec.py  evaluation_summary.py  model_utils.py  models_historical.py  models_monte_carlo.py  models_vix_regression.py  validation.py  visualization.py
src/evaluation/: __init__.py  kupiec.py  summary.py
src/models/: __init__.py  historical.py  monte_carlo.py  vix_regression.py
src/utils/: __init__.py
tests/: test_data_loader.py  test_evaluation.py  test_models.py  utils.py
